--- a/.obsidian/plugins/highlighter/manifest.json
+++ b/.obsidian/plugins/highlighter/manifest.json
@@ -1,11 +1,1 @@
-{
-	"id": "highlighter",
-	"name": "Highlighter",
-	"description": "Manage Highlights.",
-	"author": "aoout",
-	"authorUrl": "https://github.com/aoout",
-
-	"isDesktopOnly": true,
-	"minAppVersion": "0.16.0",
-	"version": "0.0.8"
-}
+{"id":"highlighter","name":"Highlighter","description":"Manage Highlights.","author":"aoout","authorUrl":"https://github.com/aoout","isDesktopOnly":true,"minAppVersion":"0.16.0","version":"1.2.0"}
